--- a/env.yml
+++ b/env.yml
@@ -10,6 +10,8 @@ dependencies:
   - pandas>=1.2.3
   - pysam<0.16
   - pysamstats>=1.1
+  - parmap==1.5.2
+  - tqdm==4.59.0
   - pip
   - pip:
     - gffpandas>=1.2
