--- a/env.yml
+++ b/env.yml
@@ -12,6 +12,7 @@ dependencies:
   - pysamstats>=1.1
   - parmap==1.5.2
   - tqdm==4.59.0
+  - biopython>=1.78
   - pip
   - pip:
     - gffpandas>=1.2
