--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
   - Home: index.md
   - Installation: installation.md
   - User guide: user-guide.md
+  - Changelog: changelog.md
 
 theme:
   name: material
