--- a/env.yml
+++ b/env.yml
@@ -6,9 +6,9 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - python=3.7
+  - python=3.8
   - pandas>=1.2.3
-  - pysam<0.16
+  - pysam=0.19
   - biopython>=1.78
   - tqdm==4.59.0
   - biopython>=1.78
