chore: re-connect dev to main

--- a/env.yml
+++ b/env.yml
@@ -2,16 +2,14 @@ name: TrueConsense
 channels:
   - bioconda
   - conda-forge
-  - intel
-  - anaconda
-  - defaults
 dependencies:
-  - python=3.7
+  - python=3.12
   - pandas>=1.2.3
-  - pysam<0.16
+  - pysam
   - biopython>=1.78
   - tqdm==4.59.0
   - biopython>=1.78
   - pip
   - pip:
-    - gffpandas>=1.2
+    - pytest>=8.4
+    - git+https://github.com/RIVM-bioinformatics/aminoextract@dev
