--- a/env.yml
+++ b/env.yml
@@ -3,13 +3,10 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
-  - python=3.12
-  - pandas>=1.2.3
-  - pysam
-  - biopython>=1.78
+  - python>=3.10
+  - pandas==2.3.*
+  - pysam==0.23.3
+  - biopython==1.85
   - tqdm==4.59.0
-  - biopython>=1.78
-  - pip
-  - pip:
-    - pytest>=8.4
-    - git+https://github.com/RIVM-bioinformatics/aminoextract@dev
+  - aminoextract==0.4.0
+  - pytest==8.4.*
