--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,26 +4,32 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   bump-version:
     name: Release version
     runs-on: ubuntu-latest
 
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v2
+      - uses: GoogleCloudPlatform/release-please-action@v4
         id: release
         with:
           release-type: python
-          package-name: TrueConsense
+          token: ${{ secrets.RELEASE_TOKEN }}
+          config-file: release-please-config.yaml
+          manifest-file: .release-please-manifest.json
 
   update-docs:
     needs: bump-version
     name: Update docs
     runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, 'chore:')"
+    if: contains(github.event.head_commit.message, 'chore(main):')
     steps:
       - name: Checkout main
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -38,17 +44,15 @@ jobs:
         run: |
           git config --global user.name "Github Actions"
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.7'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r docs-requirements.txt
-
       - name: Publish docs
         run: |
-          mike deploy --config-file mkdocs.yml --push --force --update-aliases $(git tag --sort=committerdate | tail -1 | sed 's/v//') latest
+          mike deploy --config-file mkdocs.yml --push --update-aliases $(git tag --sort=committerdate | tail -1 | sed 's/v//') latest
